<resources>
    <string name="app_name" translatable="false">Perfect Day</string>
    <string name="fragment_today">Сегодня</string>
    <string name="fragment_reminder">Напоминания</string>
    <string name="fragment_calendar">Календарь</string>

    <string name="today_holidays_not_has">Сегодня праздников нет</string>
    <string name="fact_of_day_text">Интересный факт:</string>
    <string name="birth_day_nearest_text">Ближайшие дни рождения</string>
    <string name="empty_birthdays_text">Обновите дни рождения контактов или войдите в ВК</string>
    <string name="holiday_day" translatable="false">%d %s</string>
    <string name="holiday_description" translatable="false">%s\n%s</string>

    <string name="vk_error_auth_text">Ошибка авторизации. Попробуйте позже.</string>
    <string name="age">Возраст</string>
    <string name="birthday">День Рождения</string>
    <string name="My_notice">Напоминание</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="congratulation_text">Желаете поздравить друга?</string>

    <string name="vk_auth_text">Авторизация VK</string>
    <string name="push_settings_text">Настройка push-уведомлений</string>
    <string name="vk_logout_text">Выйти из аккаунта</string>

    <!--Нужно для нормальной работы - это id нашего приложения, которое зарегистрировано в VK-->
    <integer name="com_vk_sdk_AppId">51605520</integer>

    <string name="header_note_text">Заголовок заметки</string>
    <string name="header_descr_note_text">Текст заметки</string>
    <string name="header_date_note_text">Дата события</string>
    <string name="edit_header_note_hint">Введите заголовок заметки</string>
    <string name="edit_descr_note_hint">Введите текст заметки</string>

    <string name="content_desc_logo" translatable="false">Logo application</string>
    <string name="content_desc_back" translatable="false">Back home button</string>
    <string name="content_desc_settings" translatable="false">Settings button</string>
    <string name="content_desc_clear_cache" translatable="false">Clear cache button</string>
    <string name="content_desc_floating_button" translatable="false">Add reminder</string>
    <string name="save">Сохранить</string>
    <string name="loading">Идет загрузка...</string>


    <string name="hello_app_string">ЗНАКОМСТВО С ПРИЛОЖЕНИЕМ</string>

    // PUSH
    <string name="open">Открыть</string>
    <string name="check_permissions_notification">Необходимо добавить разрешение для отправки оповещений</string>
    <string name="check_permissions_autostart">Необходимо добавить разрешение для автозапуска приложения</string>
    <string name="header_push_switch">Включить Push уведомления</string>
    <string name="push_help_description">Включите Push уведомления, и выберите время в которое программа будет Вам отправлять уведомления о события и днях рождения текущего дня.</string>
    <string name="head_text_button_switch_on">Выключить</string>
    <string name="head_text_button_switch_off">Включить</string>

    // TRANSLATOR
    <string name="translation_loading">Подождите...загружается языковая модель</string>
    <string name="translation_error_loading">Ошибка загрузки языковой модели</string>

    <string name="no_internet">Нет интернета. Проверьте подключение.</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_after_tomorrow">Послезавтра</string>
    <string name="choose_date_of_event">Выберите дату события</string>

    // PERMISSIONS REQUESTS
    <string name="alert_notification_title">Доступ к уведомлениям</string>
    <string name="alert_notification_message">Запрос на доступ к отправке уведомлений. В случае отказа, доступ можно будет предоставить только в настройках приложения.</string>
    <string name="open_permission_settings">Открыть окно предоставления доступа</string>
    <string name="close_permission_settings">Отказать в запросе</string>
    <string name="alert_autostart_title">Доступ к автозапуску приложения</string>
    <string name="alert_autostart_message">Запрос на автозапуску приложения для отправки уведомлений в запланированное время. В случае отказа, доступ можно будет предоставить только в настройках приложения.</string>
    <string name="alert_contacts_title">Доступ к контактам</string>
    <string name="alert_contacts_message">Запрос на доступ к контактам. В случае отказа, доступ можно будет предоставить только в настройках приложения.</string>


    <string name="Days">Дней</string>
    <string name="no_data_to_delete">Нет прошедших событий для удаления</string>
    <string name="deleted">Удалено</string>
    <string name="last_events">прошедших событий</string>
    <string name="birthdays">Дни рождения</string>
    <string name="no">Нет</string>
    <string name="yes_text">Да</string>
    <string name="scheduled_vents">Запланированые события</string>
    <string name="period_for_reminders">Период для отображения напоминаний</string>
    <string name="delete_scheduled_event">Удалить прошедшие напоминания</string>
    <string name="days_before_event">дней до события</string>
    <string name="event_passed">Событие прошло</string>

    <string name="header_no_data">Данных не найдено</string>
    <string name="header_birthdays_phone">Дни рождения контактов телефона</string>
    <string name="header_birthdays_vk">Дни рождения друзей ВКонтакте</string>
    <string name="header_scheduled_events">Запланированные события</string>
    <string name="intro_1_text">Получайте актуальную информацию о важных событиях на сегодня</string>
    <string name="intro_2_text">Планируйте дела, управляйте напоминаниями</string>
    <string name="intro_3_text">Получайте всю информацию в удобном формате</string>
    <string name="skip_intro">Пропустить</string>
    <string name="next">Далее</string>
    <string name="today_and_tomorrow"><![CDATA[Сегодня & Завтра]]></string>

</resources>