<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="31dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_outline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textColor="?attr/text_color_fact_of_the_day"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/congratulation_text"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_yes"
        style="@style/PerfectDay.ButtonLogoutVkStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/yes_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:strokeColor="@color/color_primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_no"
        style="@style/PerfectDay.ButtonLogoutVkStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/no"
        android:textSize="20sp" />
</LinearLayout>