<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_hello_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:gravity="center"
        android:text="@string/hello_app_string"
        android:fontFamily="@font/lora_bold"
        android:textColor="?attr/text_color_primary_to_white"
        android:textSize="@dimen/text_size_large_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hello_app"
        app:tabGravity="fill"
        app:tabIndicatorColor="?attr/text_color_primary_to_white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_large_x"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/PerfectDay.ButtonLogoutVkStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="@dimen/margin_large_x"
        android:backgroundTint="@color/color_primary"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/color_primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip"
        style="@style/PerfectDay.ButtonLogoutVkStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="@dimen/margin_large_x"
        android:backgroundTint="?attr/background_item"
        android:text="@string/skip_intro"
        android:textColor="@color/grey_text_color"
        app:layout_constraintBottom_toTopOf="@+id/indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="?attr/intro_card_circle_indicator"
        app:ci_gravity="center"
        app:ci_height="5dp"
        app:ci_orientation="horizontal"
        app:ci_width="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>