<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_vk_login"
            style="@style/PerfectDay.SettingsItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vk_auth_text"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_user_settings" />

        <include
            android:id="@+id/header_vk_user_info"
            layout="@layout/layout_vk_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb_loading_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:paddingVertical="12dp"
            android:visibility="visible" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/PerfectDay.SettingsItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/push_settings_text"
        app:drawableStartCompat="@drawable/ic_push"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <TextView
        android:id="@+id/tv_header"
        style="@style/HeaderTextStyle"
        android:layout_marginTop="40dp"
        android:text="Период для отображения напоминаний"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Discrete slider -->
    <com.google.android.material.slider.Slider
        android:id="@+id/days_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Days"
        android:stepSize="1.0"
        android:valueFrom="3.0"
        android:valueTo="14.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <TextView
        android:id="@+id/tv_slider_value"
        style="@style/BaseTextStyle"
        android:text="7 дней (12.01.2023 - 16.01.2023)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days_slider" />

    <Button
        android:id="@+id/btn_delete_old_sheduled_events"
        style="@style/PerfectDay.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Удалить прошедшие напоминания"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_slider_value" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_vk_logout"
        style="@style/PerfectDay.ButtonLogoutVkStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:text="@string/vk_logout_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>